# BMS

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Changelog.md  README.md
docs/: Doxyfile  settings_transfer.rtc  settings_transfer.stylelog
docs/source/: conf.py  index.rst  software_state.rst  srs.rst
docs/source/BQ/: index.rst  settings_transfer.rst  transfer_utility.rst  transfer_utility.rst.bak
docs/source/_static/original/: BMS_state_transition.drawio  bms_state.drawio  bms_uml.drawio  bq_settings_uml.drawio  bq_settings_update_sequence.drawio  bq_settings_update_sequence_uart.drawio
docs/source/api/: index.rst
include/: BMS.hpp  BMSCANOpenMacros.hpp  BMSInfo.hpp  BOARD_NAME.hpp  BQSetting.hpp  BQSettingStorage.hpp  ResetHandler.hpp  SystemDetect.hpp
include/BMS/: BMS.hpp  BMSLogger.hpp  BQ76952.hpp  BQSetting.hpp  BQSettingStorage.hpp
include/BMS/dev/: BMSInfo.hpp  BQ76952.hpp  Interlock.hpp  SystemDetect.hpp
include/BOARD_NAME/dev/: LED.hpp
include/dev/: BMSInfo.hpp  BQ76952.hpp  Interlock.hpp  LED.hpp  ResetHandler.hpp  SystemDetect.hpp  ThermistorMux.hpp
src/: BMS.cpp  BMSLogger.cpp  BOARD_NAME.cpp  BQ76952.cpp  BQSetting.cpp  BQSettingStorage.cpp  ResetHandler.cpp  SystemDetect.cpp
src/BOARD_NAME/dev/: LED.cpp
src/dev/: BQ76952.cpp  Interlock.cpp  LED.cpp  ResetHandler.cpp  SystemDetect.cpp  ThermistorMux.cpp
targets/: CMakeLists.txt
targets/BIKE_NAME-BOARD_NAME/: CMakeLists.txt  main.cpp
targets/BMS/: CMakeLists.txt  main.cpp
targets/BOARD_NAMEmain/: CMakeLists.txt
targets/DEV1-BMS/: CMakeLists.txt  main.cpp
targets/TestBMS/: CMakeLists.txt  main.cpp
targets/blinkUtil/: CMakeLists.txt  main.cpp
targets/bms_canopen/: CMakeLists.txt  main.cpp
targets/bq_interface/: CMakeLists.txt  main.cpp
targets/bq_settings/: CMakeLists.txt  README.md  main.cpp
targets/canopen_sample/: CMakeLists.txt
targets/eeprom_dump/: CMakeLists.txt  README.md  main.cpp
targets/reset_handler/: CMakeLists.txt  main.cpp
targets/settings_transfer/: CMakeLists.txt  main.cpp
targets/system_detect/: CMakeLists.txt  main.cpp
targets/thermistor-mux/: CMakeLists.txt  main.cpp
targets/thermistor_mux/: CMakeLists.txt  main.cpp
targets/uart_settings_upload/: CMakeLists.txt  main.cpp
tools/: temp.py
tools/BQSettingsArduino/: BQSettingsArduino.ino
tools/arduinoScratch/BQSettingsArduino/: BQSettingsArduino.ino
tools/bqsettings/: .~lock.defaults.gg.csv#  common.py  convert.py  convert_transfer.py  defaults.gg.csv  dev1_parameters.gg.csv  output.csv  requirements.txt  run.py  transfer.py
tools/bqsettings/arduinoTransfer/: arduinoTransfer.ino
tools/parse/: Testing.gg.csv  dev1_parameters.gg.csv  move_columns.py  output.gg.csv  settings_3_28_23.gg.csv
tools/status/: balancing.py  check_status.py  poll_cell.py  reset_status.py
tools/system_simulation/: system_detect.py
