# Add all targets
add_subdirectory(DEV1-BMS)
add_subdirectory(bq_interface)
add_subdirectory(bq_settings)
add_subdirectory(bms_canopen)
add_subdirectory(eeprom_dump)
add_subdirectory(reset_handler)
add_subdirectory(settings_transfer)
add_subdirectory(system_detect)
add_subdirectory(thermistor-mux)
add_subdirectory(uart_settings_upload)
